<resources>
    <string name="app_name">SchoolProg</string>
    <string name="titel_memory">Память</string>
    <string name="info_memory">Для работы приложения необходим доступ к памяти</string>
    <string name="titel_camera">Камера</string>
    <string name="info_camera">Для работы приложения необходим доступ к камере</string>
    <string name="btn_permission_ok">Разрешить</string>
    <string name="btn_permission_cansel">Позже</string>
    <string name="door_text1">Вход</string>
    <string name="door_text2">Рад видеть вас снова</string>
    <string name="door_in_btn1">Войти</string>
    <string name="door_in_btn2">Зарегистрироваться</string>
    <string name="door_in_et1">Логин</string>
    <string name="door_in_et2">Пароль</string>
    <string name="door_text3">У вас нет аккаунта?</string>
    <string name="door_text4">Нажми для регистрации</string>
    <string name="reg_text_btn">Зарегистрироваться</string>
    <string name="registration_titel1">Привет</string>
    <string name="reg_fr1_text1">Как тебя зовут?</string>
    <string name="reg_fr1_input1">Имя</string>
    <string name="reg_fr1_input2">Фамилия</string>
    <string name="reg_fr1_text2">Пол</string>
    <string name="reg_fr1_gender1">Мужчина</string>
    <string name="reg_fr1_gender2">Женщина</string>
    <string name="reg_fr1_text3">Дата рождения</string>
    <string name="reg_fr1_input3">Добавь дату рождения</string>
    <string name="reg_fr1_text4">Город</string>
    <string name="reg_fr1_input4">Добавь свой город</string>
    <string name="pick_city_titel">Город</string>
    <string-array name="cityArray">
        <item>Минск</item>
        <item>Витебск</item>
        <item>Глубокое</item>
        <item>Брест</item>
        <item>Гомель</item>
        <item>Полоцк</item>
    </string-array>
    <string name="registration_titel2">Добавь свою школу</string>
    <string name="reg_fr2_input1">Название города</string>
    <string name="reg_fr2_input2">Название школы</string>
    <string name="reg_fr2_input3">Номер класса</string>
    <string name="reg_fr2_checkBox">Выпускник</string>
    <string name="registration_titel3">Осталось ещё немного</string>
    <string name="reg_fr3_text1">Придумай логин и пароль</string>
    <string name="reg_fr3_input1">Логин</string>
    <string name="reg_fr3_input2">Пароль</string>
    <string name="reg_fr3_input3">Повторно пароль</string>
    <string name="registration_titel4">Загрузи своё фото</string>
    <string name="reg_fr4_text1">Нажми на изображение для добавления фото</string>
    <string name="win_verification_titel">Верификация</string>
    <string name="win_verification_text1">После успешной верификации тебе будут доступны все функции приложения. У верифицированных пользователей есть галочка.</string>
    <string name="win_verification_text2">Сделайте фото</string>
    <string name="win_verification_text3">Не переживайте: это фото никуда не попадет.\nОно нужно только для верификации.</string>
    <string name="win_verification_btn1">Открыть камеру</string>
    <string name="win_verification_btn1_1">Сделать фото</string>
    <string name="win_verification_btn2">Сделаю позже</string>
    <string name="win_verification_info_msg">Пожалуйста, подождите</string>
    <string name="win_verification_info_msg_t1">Успех</string>
    <string name="win_verification_info_msg_info1">верификация проведена успешна</string>
    <string name="win_verification_info_msg_t2">Ошибка</string>
    <string name="win_verification_info_msg_info2">ошибка верификации</string>
    <string name="reg_text_inp1">Логин</string>
    <string name="reg_text_inp2">Пароль</string>
    <string name="reg_text_inp3">Подтвердите пароль</string>
    <string name="reg_text_inp4">Фамилия</string>
    <string name="reg_text_inp5">Имя</string>
    <string name="reg_text_inp6">Отчество</string>
    <string name="reg_text_inp7">Дата рождения</string>
    <string name="reg_text_inp8">Номер класса</string>
    <string name="reg_name_page">Регистрация нового пользователя</string>
    <string name="registration_btn1">Далее</string>
    <string name="registration_btn2">Завершить регистрацию</string>
    <string name="reg_error">нет данных</string>
    <string name="TopMenuTitel1">Привет,</string>
    <string name="TopMenuTitel2">Вадим</string>
    <string-array name="nameTopFun">
        <item>Учебники</item>
        <item>Тесты</item>
        <item>Расписание</item>
        <item>Сообщения</item>
    </string-array>
    <string name="text_get_books_internet">Подождите, выполняется загрузка списка учебников</string>
    <string name="TopMenu_btn1">Учебники</string>
    <string name="TopMenu_btn2">Тесты</string>
    <string name="TopMenu_btn3">Расписание</string>
    <string name="profile_text_num_class">класс</string>
    <string-array name="roles">
        <item>Ученик</item>
        <item>Учитель</item>
        <item>Администратор</item>
    </string-array>
    <string name="editProfileTitle">Редактирование профиля</string>
    <string name="editProfileInput1">Имя</string>
    <string name="editProfileInput2">Фамилия</string>
    <string name="editProfileInput3">Дата рождения</string>
    <string name="editProfileInput4">Город проживания</string>
    <string name="editProfileBtnSave">Обновить</string>
    <string name="editProfileTitle2">Редактирование</string>
    <string name="editProfileAuthInp1">Логин</string>
    <string name="editProfileAuthInp2">Новый пароль</string>
    <string name="editProfileAuthInp3">Ещё раз пароль</string>
    <string name="editProfileTitle3">Редактирование школы</string>
    <string name="editProfileInp1">Название</string>
    <string name="editProfileInp2">Город расположения</string>
    <string name="editProfileInp3">Класс</string>
    <string name="editProfileInp4">Закончил школу</string>
    <string name="editProfileSchoolBtn">Обновить</string>
    <string name="text_successful_download">Книга успешно загружена</string>
    <string name="tab_select_class">КЛАСС</string>
    <string name="text_not_book">Увы, книги ещё не добавлены</string>
    <string name="tab_book_page">Страница</string>
    <string name="text_toolbar_AddBook">Добавление книги</string>
    <string name="nameBook_input_hint">Введите название книги</string>
    <string name="info_to_getBook">Нажмите клавишу выбрать файл и в открывшемся катологе выберите книгу</string>
    <string name="text_btn_getBook">выбрать файл</string>
    <string name="text_btn_send">Отправить</string>
    <string name="send_text">Подождите, выполняется загрузка файла на сервер</string>
    <string name="file_download_done">Файл успешно загружен</string>
    <string name="file_download_error">Ошибка загрузки файла</string>
    <string name="book_download_done">Книга успешно загружена</string>
    <string name="book_download_error">Ошибка загрузки книги</string>
    <string name="file_error_select">Не выбран файл для отправки</string>
    <string name="file_selected">Выбранный файл:</string>
    <string name="editBookTitel">Выберите функцию</string>
    <string name="btn_edit1">Редактирование информации о учебнике</string>
    <string name="btn_edit2">Обновление файла учебника</string>
    <string name="btn_edit3">Удаление учебника</string>
    <string name="editBookBtnOk">OK</string>
    <string name="titelDownloadBook">Учебник не скачан, загрузить его?</string>
    <string name="btnDownloadBookOk">Да</string>
    <string name="btnDownloadBookCansel">Отмена</string>
    <string name="toolbar_sub">Предметы</string>
    <string-array name="list_subjects">
        <item>Беларуская мова</item>
        <item>Беларуская литаратура</item>
        <item>Русский язык</item>
        <item>Русская литература</item>
        <item>История Беларуси</item>
        <item>Английский язык</item>
        <item>Немецкий язык</item>
        <item>Французский язык</item>
        <item>Математика</item>
        <item>Информатика</item>
        <item>Всемирная история</item>
        <item>Обществоведение</item>
        <item>География</item>
        <item>Биология</item>
        <item>Физика</item>
        <item>Астрономия</item>
        <item>Химия</item>
        <item>Трудовое обучение</item>
    </string-array>
    <string name="tab_tests_in_class">КЛАСС</string>
    <string name="text_not_tests">Увы, тесты ещё не добавлены</string>
    <string name="tab_test_question">Вопрос</string>
    <string name="text_save_res">Завершить тест</string>
    <string name="text_ot">Ответ #1</string>
    <string name="text_vb">ВЫБРАТЬ</string>
    <string name="text_prop">ПРОПУСТИТЬ ВОПРОС</string>
    <string name="text_ok_question">Ответ засчитан</string>
    <string name="question_error_select">Выберите ответ</string>
    <string name="toolbar_result">Результат теста</string>
    <string name="znak">%</string>
    <string name="text_res1">Ваш результат</string>
    <string name="res_o1">Правильных</string>
    <string name="res_o2">Неправильных</string>
    <string name="res_o3">Пропущеных</string>
    <string name="text_add_res">Сохранить результат</string>
    <string name="window_input1">Название теста</string>
    <string name="window_hint1">Введите название теста</string>
    <string name="window_btn_add_name">Продолжить</string>
    <string name="window_add_test_error">Введите название теста</string>
    <string name="window_input2">Колличество вопросов</string>
    <string name="window_input_btn">Добавить вопросы</string>
    <string name="window_add_question_title">Добавление вопроса</string>
    <string name="window_add_question_btn_add_next">Добавить ещё вопрос</string>
    <string name="window_add_question_inp1">Введите вопрос</string>
    <string name="window_add_question_inp2">Введите ответ №1</string>
    <string name="window_add_question_inp3">Введите ответ №2</string>
    <string name="window_add_question_inp4">Введите ответ №3</string>
    <string name="window_add_question_inp5">Введите ответ №4</string>
    <string name="window_add_question_inp6">Введите правильный ответ</string>
    <string name="window_add_question_btn1">Добавить вопрос</string>
    <string name="window_add_question_btn2">Завершить</string>
    <string name="send_text_add_test">Подождите, выполняется загрузка теста на сервер</string>
    <string name="test_added">Тест успешно добавлен</string>
    <string name="window_add_question_error">Пустой список вопросов</string>
    <string name="chatsTitle">Сообщения</string>
    <string name="chatsSmallTitle1">Избранные</string>
    <string name="text_toolbar_AddChat">Добавление чата</string>
    <string name="chatsTap1">Чаты</string>
    <string name="chatsTap2">Группы</string>
    <string name="favoriteUsersTitle">Добавление в избранные</string>
    <string name="allUsersTitle">Список пользователей</string>
    <string name="chatNotMsg">Напиши первый</string>
    <string name="chatHintInput">Сообщение</string>
    <string name="groupChatTitle">Новая группа</string>
    <string name="groupChatInputName">Название группы</string>
    <string name="groupChatBtnAddUsers">+ добавить участников</string>
    <string name="groupChatBtnSave">создать</string>
    <string name="toastOkReg">Пользователь успешно зарегистрирован</string>
    <string name="wrongTitel">Ошибка</string>
    <string name="alrBtnOk">OK</string>
    <string name="alrBtnCansel">Отмена</string>
    <string name="alrNotInternetConnection">Нет подключения к интернету</string>
    <string name="alrErrorSendResultTest">Ошибка отправки теста</string>
    <string name="alrNotTextInInput">Заполните все поля</string>
    <string name="alrPasswordsNotEquals">Пароли не совпадают</string>
    <string name="alrErrorDownloadBook">Ошибка скачивания файла, попробуйте ещё раз</string>
    <string name="alrAddLessonEt1">День недели</string>
    <string name="alrAddLessonEt1_default">Понедельник</string>
    <string name="alrAddLessonEt2">Название урока</string>
    <string name="alrAddLessonEt3">Начало урока</string>
    <string name="alrAddLessonEt4">Номер кабинета</string>
</resources>