<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    
    
    app:cardElevation="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_edit_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_edit1" />

            <Button
                android:id="@+id/btn_up_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_edit2" />

            <Button
                android:id="@+id/btnDelBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_edit3" />
        </LinearLayout>
    </ScrollView>


</androidx.cardview.widget.CardView>